[project]    
name = "fairscape-mds"
version = "0.1.0"
description = "FAIR data repository server"
readme = "README.md"
authors = [
        { name = "Max Levinson",    email = "mal8ch@virginia.edu"},
        { name = "Sadnan Al Manir", email = "sadnanalmanir@gmail.com"},
        { name = "Tim Clark",       email = "twc8q@virginia.edu"}
]
license = {file= "LICENSE"}
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3"]
keywords = ["fairscape", "reproducibility", "fair"]
dependencies = [
        "fastapi>=0.109.0",
        "uvicorn>=0.27.0",
        "requests>=2.31.0",
        "minio>=7.2.3",
        "python-multipart>=0.0.6",
        "docker>=7.0.0",
        "jinja2>=3.1.3",
        "casbin>=1.35.0",
        "casbin-sqlalchemy-adapter>=0.5.2",
        "kubernetes>=29.0.0",
        "pyjwt>=2.8.0",
        "requests-toolbelt>=1.0.0",
        "celery[redis]>=5.3.6",
        "boto3>=1.34.26",
        "python-dotenv>=1.0.1",
        "ipykernel>=6.29.0",
        "ipython>=8.20.0",
        "sqids>=0.4.1", 
        "boto3>=1.34.26",
        "pydantic>=2.5.1",
        "click>=8.1.7",
]
requires-python = ">=3.8"                                                                                                                                                         
                                                       
[project.urls]                              
Homepage = "https://fairscape.github.io"
                                            
[project.scripts]
fairscape-mds = "mds_python.__main__:app"
